fix: footer alignment

--- a/style.css
+++ b/style.css
@@ -154,6 +154,10 @@ section img {
   width: 50px;
   }
 
+footer img {
+  margin-top: 15px;
+}
+
 footer .foo-ul {
   background-color: #043442;
   display: flex;
@@ -182,7 +186,7 @@ text-decoration: overline;
 }
 
 footer img a:hover {
-  text-decoration: overline;
+  text-decoration: none;
   }
 
 /* footer img {
